--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 .block_course_contents .section-list {
-    margin: 0px;
-    padding-left: 20px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 .block_course_contents .section-item {
-    list-style-image: url([[pix:b]]);
     margin-bottom: 6pt;
 }
 
@@ -25,6 +25,19 @@
 }
 
 .block_course_contents .section-number {
+    padding: 2px 4px;
+    font-size: 80%;
+    font-weight: bold;
+    color: white;
+    background-color: #ccc;
+    border-radius: 3px 3px 3px 3px;
+    text-decoration: none;
+    -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px 3px 3px 3px;
+}
+
+.block_course_contents .section-item.current .section-number {
+    background-color: #0070a8;
 }
 
 .block_course_contents .section-title {
