Polish up the contributed patch
* Highlighted is the section that the user has selected (CSS class
  "selected"). The section marked as the current one by the teacher is
  still emphasised, just a bit more gently (CSS class "current").
* No need to copy the strings for the config_enumerate_section_0
  field options.
* Language strings simplified a bit.
* Fixed some detail coding style.

--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,17 @@
     margin-bottom: 6px;
 }
 
+.block_course_contents .section-item.selected {
+    font-weight: bold;
+}
+
 .block_course_contents .section-item.current {
     font-weight: bold;
 }
 
 .block_course_contents .section-number {
     padding: 2px 4px;
+    margin-right: 5px;
     font-size: 80%;
     font-weight: bold;
     color: white;
@@ -24,8 +29,12 @@
     -webkit-border-radius: 3px 3px 3px 3px;
 }
 
-.block_course_contents .section-item.current .section-number {
+.block_course_contents .section-item.selected .section-number {
     background-color: #0070a8;
+}
+
+.block_course_contents .section-item.current .section-number {
+    background-color: #999;
 }
 
 .block_course_contents a.dimmed:link,
